startup_error.txt
Traceback (most recent call last):
  File "C:\Users\camel\.gemini\antigravity\scratch\aimm\main.py", line 7, in <module>
    from strategies.market_maker import MarketMaker
  File "C:\Users\camel\.gemini\antigravity\scratch\aimm\strategies\market_maker.py", line 35, in <module>
    from core.paper_exchange import PaperGrvtExchange # Assuming this is needed based on the instruction's import list, though not used in the provided snippet.
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\camel\.gemini\antigravity\scratch\aimm\core\paper_exchange.py", line 411
    }
    ^
SyntaxError: unmatched '}'
